# comfyui-autoflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  README-01.md  README.md  object-info.json  pyproject.toml  requirements.txt
autoflow/: __init__.py  __main__.py  api.py  cli.py  connection.py  convert.py  dag.py  defaults.py  flowtree.py  inprocess.py  map.py  model_layer.py  models.py  net.py  origin.py  pngmeta.py  results.py
autograph/: __init__.py  api.py  convert.py  flowtree.py  models.py  net.py  results.py
autograph-test-suite/outputs/: index.html
autograph/mcp/: __init__.py  __main__.py  config.py  errors.py  graft.py  images.py  library.py  prompts.py  resources.py  server.py  session.py  tools.py
docs/: advanced.md  contributing-tests.md  convert.md  error-handling.md  execute.md  fastapi.md  force-recompute.md  load-vs-convert.md  map-strings-and-paths.md  mapping.md  mcp.md  node-info-and-env.md  object-info-and-env.md  progress-events.md  submit-and-images.md  troubleshooting.md
docs/research/: ApiFlowToFlowFeasibility.md  DotAccessorPlan.md  FlowBuilder.md  InputOutputConnect.md  reworkUnitTests.md
examples/code/: client_example.py  console_convert_example.py  debug_connections.py  diag_utils_shadow.py  docs-test.py  fastapi_example.py  test_connections-01.py
examples/mcp/: README.md  continue.config.json  cursor.mcp.json  vscode.mcp.json  zed.settings.json
examples/unittests/: __init__.py  _fixtures.py  harness.py  main.py  run_tests.py  test_dag.py  test_dir_and_widget_introspection.py  test_error_handling.py  test_execute_stageA.py  test_find_and_path.py  test_flow_drilling.py  test_flow_submit.py  test_flowtree_nav_ops.py  test_flowtree_nodeinfo_init.py  test_flowtree_nodeinfo_passthrough.py  test_flowtree_objectinfo_init.py  test_flowtree_objectinfo_passthrough.py  test_legacy_parity_models.py  test_map_helpers.py  (+10 more)
(+9 files in other folders)
